objects/Visit_Event__c/Visit_Event__c.object-meta.xml
<CustomObject>
    <label>Visit Event</label>
    <nameField>
        <label>Vist Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>