objects/Visit_Event__c/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <label>Agenda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>