objects/Visit_Event__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <label>Attendees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>