objects/Visit_Event__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <formula>Start_Time__c  + ( Duration__c  / 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>