objects/Visit_Event__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>