objects/Visit_Event__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Visit Events</relationshipLabel>
    <relationshipName>Visit_Events</relationshipName>
    <type>Lookup</type>
</CustomField>