objects/Visit_Event__c/fields/Minutes_of_Meeting_MoM__c.field-meta.xml
<CustomField>
    <fullName>Minutes_of_Meeting_MoM__c</fullName>
    <label>Minutes of Meeting (MoM)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>