objects/Visit_Event__c/fields/Related_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to (Customer)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Events</relationshipLabel>
    <relationshipName>Visit_Events</relationshipName>
    <type>Lookup</type>
</CustomField>