objects/Visit_Event__c/fields/Type_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Visit__c</fullName>
    <label>Type of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Outstation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>