objects/Visit_Event__c/fields/Visit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Visit_Plan__c</fullName>
    <label>Visit Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Visit_Planner__c.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Date_of_Visit__c</field>
            <operation>equals</operation>
            <valueField>Visit_Planner__c.Visit_Date__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Visit_Planner__c</referenceTo>
    <relationshipLabel>Visit Events</relationshipLabel>
    <relationshipName>Visit_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>