objects/Visit_Event__c/recordTypes/Planned_Event.recordType-meta.xml
<RecordType>
    <fullName>Planned_Event</fullName>
    <active>true</active>
    <label>Planned Event</label>
</RecordType>