objects/Visit_Event__c/recordTypes/Unplanned_Event.recordType-meta.xml
<RecordType>
    <fullName>Unplanned_Event</fullName>
    <active>true</active>
    <label>Unplanned Event</label>
</RecordType>