objects/Visit_Event__c/validationRules/Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Visit__c  &lt;  Visit_Plan__r.Visit_Date__c</errorConditionFormula>
    <errorMessage>Date of Visit Event cannot be ahead than that of Visit Plan</errorMessage>
</ValidationRule>