objects/Visit_Event__c/validationRules/Lead_or_Account_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_or_Account_Check</fullName>
    <active>true</active>
    <errorConditionFormula>(RecordType.Name == &apos;Unplanned Event&apos; &amp;&amp; ISBLANK(Lead__c)) &amp;&amp; (RecordType.Name == &apos;Unplanned Event&apos; &amp;&amp; ISBLANK( Related_to_Customer__c ))</errorConditionFormula>
    <errorMessage>Please fill either Lead or Related To(Customer) field.</errorMessage>
</ValidationRule>